# cf-speedtest-server

./: .dockerignore  Cargo.toml  Dockerfile.server  LICENSE-MIT  rustfmt.toml  wrangler.toml
.github/workflows/: build.yml
crates/cf-speedtest/: Cargo.toml
crates/cf-speedtest-core/: Cargo.toml  build.rs
crates/cf-speedtest-core/src/: lib.rs
crates/cf-speedtest-server/: Cargo.toml
crates/cf-speedtest-server-core/: Cargo.toml  build.rs
crates/cf-speedtest-server-core/src/: lib.rs
crates/cf-speedtest-server/src/: main.rs
crates/cf-speedtest-worker/: Cargo.toml  wrangler.toml
crates/cf-speedtest-worker/src/: lib.rs
crates/cf-speedtest/src/: main.rs
