[package]
name = "cf-speedtest-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cf-speedtest-server-core = { path = "../cf-speedtest-server-core" }
console_error_panic_hook = "0.1.7"
constcat = "0.6.1"
fluent-uri = { version = "0.4.1", default-features = false }
foldhash = { version = "0.2.0", default-features = false }
worker = "0.7.4"

[lints]
workspace = true
