[package]
name = "cf-speedtest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
cf-speedtest-core = { path = "../cf-speedtest-core" }
dashmap = { version = "6.1.0", features = ["inline"] }
foldhash = "0.1.3"
macro-toolset = { version = "0.3", default-features = false }
tokio = { version = "1.41", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }

[lints]
workspace = true
