[package]
name = "cf-speedtest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio"] }
bytes = "1.11"
cf-speedtest-core = { path = "../cf-speedtest-core" }
fastrace = { version = "0.7.17", features = ["enable"] }
fastrace-axum = "0.2.0"
fluent-uri = { version = "0.4.1", default-features = false }
foldhash = "0.2.0"
log = "0.4.29"
logforth = { version = "0.29.1", features = ["append-fastrace", "layout-text", "bridge-log"] }
memchr = "2.8.0"
tokio = { version = "1.50", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal"] }

[lints]
workspace = true
